--- a/index.html
+++ b/index.html
@@ -1,89 +1,98 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Desafío 4 - Modulo JS - Inmobiliaria</title>
-    <!-- CSS -->
-    <link rel="stylesheet" href="assets/css/estilos.css" />
-    <!-- Bootstrap CDN -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container">
-        <a class="navbar-brand" href="#">Inmobiliaria ADL</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarTogglerDemo02"
-          aria-controls="navbarTogglerDemo02"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <!-- <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li> -->
-            <li class="nav-item">
-              <a class="nav-link" href="./propiedades_venta.html">En venta</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./propiedades_alquiler.html">Alquiler</a>
-            </li>
-          </ul>
-        </div>
+<html lang="es">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Desafío 4 - Modulo JS - Inmobiliaria</title>
+  <!-- Bootstrap 5 CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="./assets/css/estilos.css">
+</head>
+
+<body>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <i class="fas fa-home"></i> Inmobiliaria VFH
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#hero">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#venta">Venta</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#alquiler">Alquiler</a>
+          </li>
+        </ul>
       </div>
-    </nav>
-    <main class="container-fluid main-section">
-      <h1 class="text-white">Encuentra tu nueva propiedad</h1>
-    </main>
-    <div class="container mt-5">
-
-      <!-- Propiedades en venta -->
-      <section id="venta">
-        <h2>Propiedades en venta</h2>
-        <div class="row"></div>
-        <a href="./propiedades_venta.html" class="btn btn-dark">
-          Ver todas las propiedades en venta
-        </a>
-      </section>
-      <!-- Propiedades en venta -->
-       
-      <hr />
-
-      <!-- Propiedades en alquiler -->
-      <section id="alquiler" class="mb-5">
-        <h2>Propiedades en alquiler</h2>
-        <div class="row"></div>
-        <a href="./propiedades_alquiler.html" class="btn btn-dark">
-          Ver todas las propiedades en alquiler
-        </a>
-      </section>
-      <!-- Propiedades en alquiler -->
-
     </div>
-    <!-- Font awesome -->
-    <script
-      src="https://kit.fontawesome.com/f5bdbb41e0.js"
-      crossorigin="anonymous"
-    ></script>
-    <!-- Bootstrap JS -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"
-    ></script>
+  </nav>
 
-    <script src="./assets/js/index.js" type="module"></script>
-  </body>
+  <!-- Hero Section -->
+  <section id="hero" class="hero">
+    <div class="hero-content">
+      <h1>Encuentra el hogar de tus sueños</h1>
+      <p>Descubre propiedades exclusivas seleccionadas para ti.
+        Nuestro equipo de expertos te acompañará en cada paso para encontrar la propiedad perfecta.
+      </p>
+    </div>
+  </section>
+
+  <!-- Venta Section -->
+  <section id="venta" class="property-section">
+    <div class="container">
+      <div class="text-center mb-5">
+        <h2 class="section-title">Propiedades en Venta</h2>
+      </div>
+      <div class="row"></div>
+      <div class="text-center mt-4">
+        <a href="./propiedades_venta.html" class="btn btn-primary btn-primary-custom">Ver todas las propiedades en venta</a>
+      </div>
+    </div>
+  </section>
+  <!-- Venta Section -->
+
+  <!-- Alquiler Section -->
+  <section id="alquiler" class="property-section">
+    <div class="container">
+      <div class="text-center mb-5">
+        <h2 class="section-title">Propiedades en Alquiler</h2>
+      </div>
+      <div class="row"></div>
+      <div class="text-center mt-4">
+        <a href="./propiedades_alquiler.html" class="btn btn-primary btn-primary-custom">Ver todas las propiedades en alquiler</a>
+      </div>
+    </div>
+  </section>
+  <!-- Alquiler Section -->
+
+  <!-- Footer -->
+  <footer id="contacto" class="footer">
+    <div class="container">
+      <div class="footer-brand">
+        <i class="fas fa-home"></i>
+        <h3>Inmobiliaria VFH</h3>
+      </div>
+      <div class="copyright">
+        &copy; 2025 VFH. Todos los derechos reservados.
+      </div>
+    </div>
+  </footer>
+
+  <!-- Bootstrap JS Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="./assets/js/index.js" type="module"></script>
+</body>
+
 </html>
